# Ran:
#   aclocal
#   autoheader
#   automake --force-missing --add-missing
#   autoconf

AC_INIT([bueno], [0.1])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_RANLIB
AC_CONFIG_SRCDIR([src/util/common.h])
AC_CONFIG_FILES([Makefile src/Makefile src/util/Makefile src/test/Makefile])
AM_SILENT_RULES
AC_OUTPUT

